--- a/week4/mon/ritly_with_auth/Gemfile
+++ b/week4/mon/ritly_with_auth/Gemfile
@@ -34,7 +34,7 @@ end
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt-ruby'
-
+gem 'annotate'
 # Use unicorn as the app server
 # gem 'unicorn'
 
